# progressbar-cp

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml  test.yml
src/: arg.rs  copier.rs  main.rs
src/actions/: mod.rs  preserve.rs  recursive.rs  showbar.rs  update.rs
tests/: system_tests.rs
utils/copier/: Cargo.toml
utils/copier/benches/: cp_benchmark.rs
utils/copier/src/: copiers.rs  filecopier.rs  filecopy.rs  lib.rs
utils/copier/src/copiers/: basecopier.rs  mod.rs  zerocopier.rs
utils/scanner/: Cargo.toml
utils/scanner/src/: lib.rs  scanners.rs
utils/scanner/src/scanners/: basescanner.rs
