[package]
name = "rs_cp"
version = "0.1.0"
edition = "2021"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
log = "0.4.22"
anyhow = "1.0.95"

[dependencies]
copier = {path = "./utils/copier"}
scanner = {path = "./utils/scanner"}
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
indicatif = "0.17.9"
log.workspace = true
anyhow.workspace = true

[[bin]]
name = "pbcp"
bench = false
path = "src/main.rs"

[workspace]
members = ["utils/copier", "utils/scanner"]
