[workspace.package]
version = "0.1.1"
edition = "2021"

[package]
name = "progressbar-cp"
version.workspace = true
authors = ["Wormarz <wormarz@outlook.com>"]
license = "MIT"
description = "A tool to copy files. It shows processing by progress bar."
homepage = "https://github.com/Wormarz/progressbar-cp"
repository = "https://github.com/Wormarz/progressbar-cp"
keywords = ["cli", "copy", "progressbar"]
categories = ["command-line-utilities"]
readme = "README.md"
edition.workspace = true

[workspace.dependencies]
log = "0.4.22"
anyhow = "1.0.95"

[dependencies]
copier = {path = "./utils/copier"}
scanner = {path = "./utils/scanner"}
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
indicatif = "0.17.9"
log.workspace = true
anyhow.workspace = true

[[bin]]
name = "pbcp"
bench = false
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[workspace]
members = ["utils/copier", "utils/scanner"]

[features]
default = ["basecopier",]
basecopier = []
zerocopier = []
