[package]
name = "copier"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
indicatif = "0.17.9"
libc = {version = "0.2", optional = true}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "cp_benchmark"
harness = false

[features]
basecopier = []
zerocopier = ["libc", ]
