[package]
name = "copier"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
indicatif = "0.17.9"
libc = "0.2"

[dev-dependencies]
criterion = "0.3"
tempfile = "3.15.0"

[[bench]]
name = "cp_benchmark"
harness = false

[features]
basecopier = []
zerocopier = []
